pass exports through @Fork